force-app/main/default/objects/Classes__c/Classes__c.object-meta.xml
<CustomObject>
    <description>Booked Classes</description>
    <label>Class</label>
    <nameField>
        <displayFormat>CLS-{00000}</displayFormat>
        <label>Class Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Classes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>