force-app/main/default/objects/Classes__c/fields/AR_Created__c.field-meta.xml
<CustomField>
    <fullName>AR_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AR Created</label>
    <type>Checkbox</type>
</CustomField>