force-app/main/default/objects/Classes__c/fields/Work_Type__c.field-meta.xml
<CustomField>
    <fullName>Work_Type__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Work Type</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 OR 2) AND 3</booleanFilter>
        <errorMessage>IH active Work Type needs to be used for public courses!</errorMessage>
        <filterItems>
            <field>WorkType.Name</field>
            <operation>contains</operation>
            <value>IH</value>
        </filterItems>
        <filterItems>
            <field>WorkType.Name</field>
            <operation>contains</operation>
            <value>Online Support</value>
        </filterItems>
        <filterItems>
            <field>WorkType.Product__r.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>WorkType</referenceTo>
    <relationshipLabel>Classes</relationshipLabel>
    <relationshipName>Classes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>