force-app/main/default/objects/Classes__c/validationRules/Distance_Learning_IH_Address.validationRule-meta.xml
<ValidationRule>
    <fullName>Distance_Learning_IH_Address</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
 CONTAINS(Work_Type__r.Product__r.Name, &quot;DLIH&quot;),
  Class_Address__c != &apos;a1Y4p000001CQp3&apos;
)</errorConditionFormula>
    <errorMessage>Must use &quot;Distance Learning&quot; training address for DLIH courses!</errorMessage>
</ValidationRule>