force-app/main/default/objects/Classes__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Work_Type__c</columns>
    <columns>Class_Address__c</columns>
    <columns>Start_Date_and_Time__c</columns>
    <columns>Service_Appointment__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>